Fixes: NB#287568 - Language Settings - truncation of §qtn_lang_usb_reboot_fail§ in EU French

--- a/base/meegotouch/libmeegotouchviews/style/mbannerstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mbannerstyle.css
@@ -105,7 +105,7 @@ MBannerStyle #SystemBanner.Portrait {
     color:$COLOR_INVERTED_FOREGROUND;
     font: $FONT_DEFAULT;
 
-    preferred-line-count: 2;
+    preferred-line-count: 3;
     preferred-line-count-behavior: "limit";
 
     margin-top: 0;
@@ -144,7 +144,7 @@ MBannerStyle #InformationBanner.Portrait {
     color:$COLOR_INVERTED_FOREGROUND;
     font: $FONT_DEFAULT;
 
-    preferred-line-count: 2;
+    preferred-line-count: 3;
     preferred-line-count-behavior: "limit";
 
     margin-top: 0;
